Update CodeAnalysisEngine.java